--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,16 @@
 @import "~@ng-select/ng-select/themes/default.theme.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+
+.breadcrumb-item+.breadcrumb-item::before {
+    display: inline-block;
+    padding-right: .5rem;
+    padding-left: .5rem;
+    color: #6c757d;
+    content: ">" !important;
+}
+
+
 .color-d-salmon{
   color: darksalmon !important;
 }
