--- a/src/app/AdminPanel/pages/category-master/category-list/category-list.component.html
+++ b/src/app/AdminPanel/pages/category-master/category-list/category-list.component.html
@@ -55,6 +55,19 @@
           </select>
         </div>
       </div>
+
+
+    <div class="form-group row">
+      <label class="col-sm-2 col-form-label">Category Image</label>
+      <div class="col-sm-4">
+        <input class="form-control"  type="file" accept="image/*" id="Image_URL" (change)="ChangeImage($event)">
+      </div>
+      <div class="col-sm-4">
+        <img id="imagePreview" [src]="Image_Path" alt="Item image" width="150" height="130">
+      </div>
+    </div>
+
+
     </div>
     <br />
     <div><div class='text-danger f-12'><span>{{warningMessage}}</span></div></div>
