--- a/src/app/AdminPanel/pages/item-master/add-edit-item/add-edit-item.component.html
+++ b/src/app/AdminPanel/pages/item-master/add-edit-item/add-edit-item.component.html
@@ -24,7 +24,7 @@
     class='alert alert-danger'>Please Enter Display Seq No</div>
 </div>
 
-<form [formGroup]="itemForm" (ngSubmit)="save()" #formDir="ngForm" novalidate>
+<form [formGroup]="itemForm" (ngSubmit)="save()" #formDir="ngForm"  enctype="multipart/form-data" novalidate>
   <div>
 
     <div class="form-group row">
@@ -98,6 +98,17 @@
       </div>
     </div>
 
+
+    <div class="form-group row">
+      <label class="col-sm-2 col-form-label">Item Image</label>
+      <div class="col-sm-4">
+        <input class="form-control"  type="file" accept="image/*"  id="Item_Image_URL" (change)="ChangeItemImage($event)">
+      </div>
+      <div class="col-sm-4">
+        <img id="imagePreview" [src]="Image_Path" alt="Item image" width="150" height="130">
+      </div>
+    </div>
+
   </div>
   <br />
   <hr />
@@ -105,8 +116,8 @@
     <div class="form-group align-center">
       <button type="submit" class="btn btn-success fa fa-check-square-o cursor-pointer"> <span class="font-d">
           Save</span></button> &nbsp;
-      <button class="btn btn-danger fa fa-remove cursor-pointer" (click)="cancel()"><span class="font-d">
-          Cancel</span></button>
+      <a class="btn btn-danger fa fa-remove cursor-pointer" [routerLink]="['/master/item-master']"><span class="font-d">
+          Cancel</span></a>
     </div>
   </div>
 
