--- a/src/app/clientside/clientpages/landing_page/product/product.component.html
+++ b/src/app/clientside/clientpages/landing_page/product/product.component.html
@@ -1,30 +1,13 @@
 
   <div class="slider-area slider-height" data-background="assets/img/hero/h1_hero.jpg">
     <!-- slider Area Start-->
-    <ngb-carousel (slide)="slideActivate($event)" class="myclass">
-      <ng-template ngbSlide>
-        <div class="picsum-img-wrapper slide-m">
-          <img src="assets/img/slider/grosary1.png" alt="Angular Carousel 1" style="width: 100%; height: 50vh">
-        </div>
-        <div class="carousel-caption">
-          <!-- <h3>Title Goes Here</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
-        </div>
-      </ng-template>
-      <ng-template ngbSlide>
-        <div class="picsum-img-wrapper slide-m">
-          <img src="assets/img/slider/grosary2.png" alt="Angular Carousel 2" style="width: 100%; height: 50vh">
-        </div>
-        <div class="carousel-caption">
+    <ngb-carousel (slide)="slideActivate($event)" class="myclass" *ngIf="listSliderUrl.length > 0">
 
-        </div>
-      </ng-template>
-      <ng-template ngbSlide>
+      <ng-template ngbSlide *ngFor="let url of listSliderUrl">
         <div class="picsum-img-wrapper slide-m">
-          <img src="assets/img/slider/grosary3.png" alt="Angular Carousel 2" style="width: 100%; height: 50vh">
+          <img [src]="url" alt="Angular Carousel 1" style="width: 100%; height: 50vh">
         </div>
         <div class="carousel-caption">
-
         </div>
       </ng-template>
     </ngb-carousel>
