--- a/src/app/clientside/clientpages/landing_page/product/product.component.html
+++ b/src/app/clientside/clientpages/landing_page/product/product.component.html
@@ -1,5 +1,5 @@
 
-  <div class="slider-area slider-height" data-background="assets/img/hero/h1_hero.jpg">
+  <div class="slider-area slider-height mb-3" data-background="assets/img/hero/h1_hero.jpg">
     <!-- slider Area Start-->
     <ngb-carousel (slide)="slideActivate($event)" class="myclass" *ngIf="listSliderUrl.length > 0">
 
